# ppoc-gen-v2

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.github/: specs.md
.github/workflows/: deploy.yml  preview.yml  test.yml
assets/: manifest.json  tailwind.css
assets/i18n/: de.json  en.json  es.json  fr.json
assets/icons/: icon.icns
assets/styling/: blog.css  main.css
icons/: icon.icns
src/: i18n.rs  main.rs
src/components/: bottombar.rs  hero.rs  layout.rs  mod.rs  navbar.rs  sidebar.rs
src/db/: dao.rs  mod.rs  wasm_store.rs
src/views/: absences.rs  blog.rs  configuration.rs  home.rs  landpage.rs  mod.rs  publishers.rs  schedules.rs  shifts.rs
