[package]
name = "dx-app"
version = "0.0.0-git"
authors = ["Marcos Fernández <marcosfernandezperez9@gmail.com>"]
edition = "2024"
publish = false

[dependencies]
dioxus = { version = "0.7.0-alpha.2" , features = ["router"] }
dioxus-free-icons = { version = "0.9", features = ["hero-icons-solid"] }
web-sys = { version = "0.3.77", features = ["Window", "Navigator"] }

[features]
default = ["dioxus/web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
bundle = []

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
