[package]
name = "ppoc-gen"
version = "0.0.0-git"
authors = ["MarckFp <33698618+MarckFp@users.noreply.github.com>"]
edition = "2024"
publish = false

[dependencies]
dioxus = { version = "0.7.0-rc.0" , features = ["router"] }
dioxus-free-icons = { version = "0.9", features = ["hero-icons-solid"] }
web-sys = { version = "0.3.77", features = ["Window", "Navigator", "Storage", "Document", "Element"] }
js-sys = "0.3.77"
wasm-bindgen = "0.2"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"], optional = true }
once_cell = "1.19"
dirs-next = { version = "2.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
argon2 = { version = "0.5", optional = true }
rand = { version = "0.9", optional = true }
zeroize = { version = "1.8", optional = true }
hex = "0.4"
chrono = { version = "0.4", features = ["clock", "serde"] }

[features]
default = ["dioxus/web"]
web = ["dioxus/web"]
native-db = ["rusqlite", "dirs-next"]
desktop = ["dioxus/desktop", "native-db"]
mobile = ["dioxus/mobile", "native-db"]
bundle = []
encryption = ["argon2", "rand", "zeroize", "native-db"]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
